# AdventOfCode2025

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: python_ci.yml
src/adventofcode2025/: __init__.py
src/aoc25/: common.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  inputs.py
src/tests/: test_common.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_placeholder.py
