[project]
name = "adventofcode2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Holmes", email = "dan@volantautonomy.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aoc-tools-dannyboywoop>=1.2.0",
]

[project.scripts]
adventofcode2025 = "adventofcode2025:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
